Fixed alignement

--- a/src/App.css
+++ b/src/App.css
@@ -38,10 +38,17 @@ body {
 }
 
 #widget-container .flex.items-center.gap-4 {
-    flex-direction: column;
     align-items: center;
     align-self: center;
-    gap: 0.5rem;
+    gap: 0.25%;
+}
+
+.mb-4 {
+    margin-bottom: 1rem;
+}
+
+.text-center {
+    text-align: center;
 }
 
 .flex-wrap {
